@@ -1,3 +1,5 @@
+HEAD
+	+ Make service records accept '_' prefix in their names
 4.1
 	+ Remove external AD integration
 4.0.2
